# PAG_PROJECT

./: .gitignore  CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  conandata.yml  main.cpp
Camara/: Camara.cpp  Camara.h  Camera.cpp  Camera.h
GUI/: GUI.cpp  GUI.h
Light/: Light.cpp  Light.h  LightProperties.h
Light/LightApplicator/: LightApplicator.h
Light/LightApplicator/AmbientLightApplicator/: AmbientLightApplicator.cpp  AmbientLightApplicator.h
Light/LightApplicator/DirectionaLightApplicator/: DirectionalLightApplicator.cpp  DirectionalLightApplicator.h
Light/LightApplicator/PointLightApplicator/: PointLightApplicator.cpp  PointLightApplicator.h
Light/LightApplicator/SpotLightApplicator/: SpotLightApplicator.cpp  SpotLightApplicator.h
Material/: Material.cpp  Material.h
Model/: Model.cpp  Model.h
Renderer/: Renderer.cpp  Renderer.h
Shader/: Shader.cpp  Shader.h
ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
Texture/: Texture.cpp  Texture.h
img/: UML.puml
imgui/headers/: imgui.h  imgui_internal.h  imstb_textedit.h
imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
shaders/: pag03-fs.glsl  pag03-vs.glsl  pag05-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl  pag09-fs.glsl  pag09-vs.glsl
